--- a/positionstyles.css
+++ b/positionstyles.css
@@ -4,30 +4,30 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center;
-  gap: 20px;
+  grid: gap 20px;
   /* This is the parent of the activity 1 boxes. */
 
 }
 .red1 { 
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
   grid-column: 1/3;
 
 } 
 .green1 {
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 200px; 
   background-color: green; 
 
 } 
 .yellow1 {
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 200px; 
   background-color: gold; 
 } 
 .blue1 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: blue; 
 } 
@@ -38,21 +38,31 @@
 .red2 {
   width: 100px; 
   height: 100px; 
+  position: relative;
   background-color: red; 
 } 
 .green2 { 
   width: 100px; 
   height: 100px; 
+  position: relative;
+  bottom: 50px;
+  left:50px;
   background-color: green; 
 } 
 .yellow2 {
   width: 100px; 
   height: 100px; 
+  position: relative;
+  bottom: 100px;
+  left: 100px;
   background-color: gold; 
 } 
 .blue2 {
   width: 100px; 
   height: 100px; 
+  position: relative;
+  bottom: 150px;
+  left: 150px;
   background-color: blue; 
 } 
 /* Activity 3 styles */ 
