--- a/positionstyles.css
+++ b/positionstyles.css
@@ -71,24 +71,30 @@
   /* This is the parent of the activity 3 boxes. */
 }
 .red3 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
+  grid-column: 1/3;
 } 
 .green3 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: green;
+  grid-row: 2/3;
+  grid-column: 1/2;
 } 
 .yellow3 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: gold; 
+  grid-row: 2/3;
+  grid-column: 2/3;
 } 
 .blue3 {
-  width: 100px;
+  width: 100%;
   height: 100px; 
   background-color: blue; 
+  grid-column: 1/3;
 } 
 /* Activity 4 styles */ 
 .content4 {
