--- a/positionstyles.css
+++ b/positionstyles.css
@@ -135,24 +135,26 @@
   height: 400px;
 }
 .red5 { 
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: red; 
 } 
 .green5 { 
-  width: 100px; 
-  height: 100px; 
+  width: 150px; 
+  height: 150px; 
   background-color: green; 
+  float: left;
+  margin:1em;
 
 } 
 .yellow5 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
   background-color: gold; 
+  padding:1em;
 
 } 
 .blue5 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: blue; 
 } 
