--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -8,6 +8,10 @@ body{
     padding: 0;
 }
 
+h1{
+    margin-left: 41%;
+}
+
 h2{
     margin:0;
 }
@@ -25,14 +29,14 @@ h2{
 
 nav{
     display: flex;
+    align-items: center;
     justify-content: space-around;
 }
 nav a{
     text-align: center;
-    background-color: bisque;
     color: black;
     text-decoration:none;
-    padding-top: 5px;
+    padding: 40px;
 }
 
 nav a:hover{
@@ -42,7 +46,7 @@ nav a:hover{
 }
 
 .home-title{
-    color: darkblue;
+    color: skyblue;
     font-family: 'Rock Salt', 'Bradley Hand', sans-serif;
     font-size: 2em;
     margin-top: 10px;
@@ -174,6 +178,7 @@ header{
 
 main section img{
     box-sizing: border-box;
+    
 }
 
 .icon{
