--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -173,13 +173,43 @@ header{
     transform: scale(1.1);
 }
 
+.reservation-grid{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-gap: 30px;
+}
 
 
+.main1{
+    grid-column: 3/6;
+    text-align: end;
+}
+.hours{
+    grid-column: 8/12;
+    text-align: center;
+}
 
 main section img{
     box-sizing: border-box;
-    
 }
+.location{
+    padding-left: 100px;
+}
+.safety{
+}
+.safety1{
+
+}
+
+.map{
+}
+
+.reservationInfo{
+    background-color:lightsalmon;
+    text-align: center;
+    grid-column: 5/12;
+}
+
 
 .icon{
     width: 80px;
