--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -192,16 +192,17 @@ header{
 main section img{
     box-sizing: border-box;
 }
+.safety, .map{
+    width: 25%;
+    padding-left: 10px;
+    padding-right: 50px;
+}
 .location{
-    padding-left: 100px;
-}
-.safety{
-}
-.safety1{
-
-}
-
-.map{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 50px;
+    background-color: darkgray;
 }
 
 .reservationInfo{
@@ -273,68 +274,69 @@ form {
     padding: 1em;
     border: 1px solid #ccc;
     border-radius: 1em;
-  }
-  
-  ul {
+    background-color: thistle;
+}
+
+ul {    
     list-style: none;
     padding: 0;
     margin: 0;
-  }
-  
-  form li + li {
+}
+
+form li + li {
     margin-top: 1em;
-  }
-  
-  label {
+}
+
+label {
     /* Uniform size & alignment */
     display: inline-block;
     width: 90px;
     text-align: right;
     margin: @ 10px @ 40px
-  }
-  
-  input,
-  textarea {
+}
+
+input,
+textarea {
     /* To make sure that all text fields have the same font settings
-       By default, textareas have a monospace font */
+    By default, textareas have a monospace font */
     font: 1em sans-serif;
-  
+
     /* Uniform text field size */
     width: 300px;
     box-sizing: border-box;
-  
+
     /* Match form field borders */
     border: 1px solid #999;
-  }
-  
-  input:focus,
-  textarea:focus {
-    /* Additional highlight for focused elements */
+}
+
+input:focus,
+textarea:focus {
+/* Additional highlight for focused elements */
     border-color: #000;
-  }
-  
-  textarea {
-    /* Align multiline text fields with their labels */
+}
+
+textarea {
+/* Align multiline text fields with their labels */
     vertical-align: top;
-  
-    /* Provide space to type some text */
+
+/* Provide space to type some text */
     height: 5em;
-  }
-  
-  .button {
-    /* Align buttons with the text fields */
+}
+
+.button {
+/* Align buttons with the text fields */
     padding-left: 90px; /* same size as the label elements */
-  }
-  
-  button {
-    /* This extra margin represent roughly the same space as the space
-       between the labels and their text fields */
+}
+
+button {
+/* This extra margin represent roughly the same space as the space
+between the labels and their text fields */
     background-color: cadetblue;
     margin-left: 0.5em;
     padding: 10px;
     font-size: 0.9em;
-  }
-  
+}
+
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
