--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -46,7 +46,7 @@ nav a:hover{
 }
 
 .home-title{
-    color: skyblue;
+    color: aquamarine;
     font-family: 'Rock Salt', 'Bradley Hand', sans-serif;
     font-size: 2em;
     margin-top: 10px;
@@ -102,7 +102,7 @@ h4{
 }
 
 #hero-msg{
-    color: black;
+    color: darkcyan;
     grid-column: 2/3;
     grid-row: 1/2;
     margin-top: 100px;
@@ -110,6 +110,10 @@ h4{
 
 #hero-msg h1, #hero-msg h4{
     text-align: center;
+}
+
+#hero-img{
+    width: 100%;
 }
 
 .home-grid{
