--- a/pueblos magicos/styles/styles.css
+++ b/pueblos magicos/styles/styles.css
@@ -173,3 +173,21 @@ nav a:hover {
   border-top: 1px solid;
   border-right: 1px solid;
 }
+
+/*my edits*/
+
+footer .social img{
+    padding-top: 15px;
+}
+
+footer{
+    padding: 25px 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.logo{
+  width: 10%;
+}
