--- a/pueblos_magicos/styles/styles.css
+++ b/pueblos_magicos/styles/styles.css
@@ -176,6 +176,80 @@ nav a:hover {
 
 /*my edits*/
 
+
+#hero{
+  display: grid;
+  background-color: darkgray;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+}
+
+#hero-box {
+  grid-column: 2/4;
+  grid-row: 2/4;
+}
+
+#hero-msg{
+  color: darkcyan;
+  background-color: aliceblue;
+  grid-column: 1/2;
+  grid-row: 1/2;
+  margin-top: 100px;
+}
+
+#hero-msg h1{
+  text-align: left; 
+}
+
+#hero-quote{
+  background-color: aliceblue;
+  grid-column: 4/5;
+  grid-row: 3/4;
+}
+#hero-msg h4{
+}
+
+#hero-img{
+  width: 100%;
+}
+
+
+
+
+.home-grid{
+  display : grid;
+  
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.inmap-photo3{
+  grid-column: 1/4;
+  grid-row: 1/4;
+}
+.inmap-photo1{
+  grid-column: 3/7;
+  grid-row: 3/6;
+
+}
+.inmap-photo2{
+  grid-column: 5/9;
+  grid-row: 5/9;
+}
+.inmap-photo4{
+  grid-column: 10/14;
+  grid-row: 1/6;
+}
+.inmap-photo5{
+  grid-column: 8/13;
+  grid-row: 3/8;
+}
+
+.huasca{
+  width: 100%;
+}
+
+
+
 footer .social img{
     padding-top: 15px;
 }
