--- a/pueblos_magicos/styles/styles.css
+++ b/pueblos_magicos/styles/styles.css
@@ -101,6 +101,7 @@ p.colored {
 
 nav {
   background-color: var(--nav-background-color);
+  justify-content: space-around;
   line-height: 3em;
   text-align: center;
   font-size: 1.2em;
@@ -178,35 +179,24 @@ nav a:hover {
 
 
 #hero{
+  padding: 0 50px;
+  margin-bottom: 30px;
+  margin-top: 30px;
   display: grid;
-  background-color: darkgray;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  background-color: #33cc33;
 }
 
 #hero-box {
-  grid-column: 2/4;
-  grid-row: 2/4;
 }
 
 #hero-msg{
   color: darkcyan;
   background-color: aliceblue;
-  grid-column: 1/2;
-  grid-row: 1/2;
-  margin-top: 100px;
 }
 
-#hero-msg h1{
-  text-align: left; 
-}
 
 #hero-quote{
   background-color: aliceblue;
-  grid-column: 4/5;
-  grid-row: 3/4;
-}
-#hero-msg h4{
 }
 
 #hero-img{
@@ -218,30 +208,31 @@ nav a:hover {
 
 .home-grid{
   display : grid;
-  
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  background-color: #ffe066; 
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr ;
 }
+
 
 .inmap-photo3{
-  grid-column: 1/4;
-  grid-row: 1/4;
+  grid-column: 1/3;
+  grid-row: 1/3;
 }
 .inmap-photo1{
-  grid-column: 3/7;
-  grid-row: 3/6;
-
+  grid-column: 3/5;
+  grid-row: 3/5;
 }
 .inmap-photo2{
-  grid-column: 5/9;
-  grid-row: 5/9;
+  grid-column: 5/7;
+  grid-row: 5/7;
 }
 .inmap-photo4{
-  grid-column: 10/14;
-  grid-row: 1/6;
+  grid-column: 7/9;
+  grid-row: 7/9;
 }
 .inmap-photo5{
-  grid-column: 8/13;
-  grid-row: 3/8;
+  grid-column: 9/11;
+  grid-row: 9/11;
 }
 
 .huasca{
@@ -249,17 +240,18 @@ nav a:hover {
 }
 
 
-
 footer .social img{
-    padding-top: 15px;
+  padding-top: 15px;
 }
 
 footer{
-    padding: 25px 50px;
-    margin-top: 200px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  background-color: beige;
+  color: darkgray;
+  padding: 25px 50px;
+  margin-top: 200px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .logo{
