--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@ body{
     background-color: azure;
 }
 nav{
-    padding:10px;
+    padding:50px;
     display:flex;
     justify-content: center;
     background-color: lightblue;
@@ -22,12 +22,13 @@ nav{
 }
 
 img{
-    width: 300px;
+    width: 700px;
     display: block;
     margin: 0 auto;
 }
 a{
     color: black;
+    padding: 10px;
 }
 h1{
     text-align: center;
@@ -44,7 +45,8 @@ nav a:hover{
 }
 
 p{
-    text-align: center;
+    padding: 30px;
+    text-align: left;
 }
 
 #sub-title{
