--- a/pueblos_magicos/styles/styles.css
+++ b/pueblos_magicos/styles/styles.css
@@ -30,7 +30,7 @@ Fonts are separated by a | */
 /*  Look around below...but DON'T CHANGE ANYTHING! */
 
 body {
-  max-width: 1200px;
+  max-width: 1000px;
   margin: 0 auto;
   padding: 4em;
   font-size: 18px;
@@ -278,7 +278,6 @@ nav a:hover {
   display : grid;
   background-color: #ffe066; 
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr ;
 }
 
 
@@ -310,18 +309,68 @@ nav a:hover {
 
 footer .social img{
   padding-top: 15px;
+  padding-left: 15px;
+  width: 50px;
+}
+
+.social{
+  display: flex;
 }
 
 footer{
   background-color: beige;
   color: darkgray;
   padding: 25px 50px;
-  margin-top: 200px;
+  margin-top: 50px;
   display: flex;
-  justify-content: space-around;
+  justify-content:space-around;
   align-items: center;
 }
+footer h3{
+  font-size: 0.9em;
+}
+footer a{
+    color: darkcyan;
+    text-decoration: none;
+    font-size: 0.7em;
+}
+footer a:hover{
+    color: darkgoldenrod;
+}
 
+.logo_link{
+  padding-top: 5px;
+  justify-self: center;
+  align-self: center;
+  margin-left: 0px;
+}
 .logo{
-  width: 10%;
+  width: 100%;
+}
+#content{
+    max-width:1600px;
+    margin: 0 auto;
+}
+
+nav{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+nav a{
+  text-align: center;
+  color: black;
+  text-decoration:none;
+  padding: 40px;
+}
+
+nav a:hover{
+  background-color: #ff9966;
+  color: darkcyan;
+  text-decoration: none;
+}
+header{
+    display: grid;
+    grid-template-columns: 150px auto;
+    background-color: lightgoldenrodyellow;
 }
