--- a/pueblos_magicos/styles/styles.css
+++ b/pueblos_magicos/styles/styles.css
@@ -176,8 +176,52 @@ nav a:hover {
 }
 
 /*my edits*/
+/*info css vertical tab*/
+* {box-sizing: border-box}
 
-* {box-sizing:border-box}
+/* Style the tab */
+.tab {
+  float: left;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+  width: 30%;
+  height: 300px;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  display: block;
+  background-color: inherit;
+  color: black;
+  padding: 22px 16px;
+  width: 100%;
+  border: none;
+  outline: none;
+  text-align: left;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current "tab button" class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  float: left;
+  padding: 0px 12px;
+  border: 1px solid #ccc;
+  width: 70%;
+  border-left: none;
+  height: 300px;
+}
+
 
 /* Slideshow container */
 .slideshow-container {
@@ -232,7 +276,7 @@ nav a:hover {
   position: absolute;
   bottom: 8px;
   width: 100%;
-  text-align: center;
+  text-align: right;
 }
 
 /* Number text (1/3 etc) */
@@ -318,6 +362,7 @@ footer .social img{
 }
 
 footer{
+  padding-top: 15px;
   background-color: beige;
   color: darkgray;
   padding: 25px 50px;
@@ -374,3 +419,4 @@ header{
     grid-template-columns: 150px auto;
     background-color: lightgoldenrodyellow;
 }
+
