--- a/pueblos_magicos/styles/styles.css
+++ b/pueblos_magicos/styles/styles.css
@@ -320,31 +320,28 @@ nav a:hover {
 
 
 .home-grid{
-  display : grid;
   background-color: #ffe066; 
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
+.maps-grid{
+  background-color: #ffe066;
+}
 
-.inmap-photo3{
-  grid-column: 1/3;
-  grid-row: 1/3;
+.row
+{
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
 }
-.inmap-photo1{
-  grid-column: 3/5;
-  grid-row: 3/5;
+.column {
+  flex: 50%;
+  padding: 0 4px;
 }
-.inmap-photo2{
-  grid-column: 5/7;
-  grid-row: 5/7;
-}
-.inmap-photo4{
-  grid-column: 7/9;
-  grid-row: 7/9;
-}
-.inmap-photo5{
-  grid-column: 9/11;
-  grid-row: 9/11;
+
+.column img {
+  width: 50%;
+  margin-top: 8px;
+  vertical-align: middle;
 }
 
 .huasca{
